<resources>
    <string name="app_name">MDU</string>
    <string name="dialog_message">Loading</string>
    <string name="copy_right">Copyright&#174; 2020. PTC and/or its affiliates. All rights  reserved.</string>
    <string name="inventory_desc">The following table shows the total and remaining inventory of medicines.</string>
    <string name="inventory_desc2">Please enter the details for the new inventory being added.</string>
    <string name="inventory_desc3">Please enter the patients details</string>
    <string name="name">Enter Name</string>
    <string name="back">Back</string>
    <string name="string_back">Back</string>
    <string name="not_get_medicine_list">Unable To Get Medicine List</string>
    <string name="not_get_records">Unable To Import Doctors Data</string>
    <string name="inventory_desc4">Please enter diagnosis and prescribed medicines.</string>
    <string name="inventory_desc5">prescribed medicine. </string>
    <string name="prescribed_medicine">Prescribed Medicine</string>
    <string name="frequency">Frequency</string>
    <string name="days">Days</string>
    <string name="consultation_desc">Please review the details for the consultation</string>
    <string name="deive_list">Paired Devices</string>
    <string name="internet_connection">Make sure that Wi-Fi or mobile data is turned on, then try again</string>
    <string name="title_internet_connection">No Internet Connection</string>

    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>