<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="clickHandler"
            type="com.heuristify.mdu.interfaces.OnClickHandlerInterface" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light"
        android:orientation="vertical"
        tools:context=".view.activities.AddDiagnosisAndMedicineActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{clickHandler::onClick}"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/chevron_left_24px"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textViewBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_toRightOf="@id/imageViewBack"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:onClick="@{clickHandler::onClick}"
                android:text="@string/string_back"
                android:textColor="@color/light1"
                android:textSize="@dimen/_15sdp"
                android:textStyle="normal"
                android:layout_toEndOf="@id/imageViewBack" />

            <TextView
                android:id="@+id/textViewAddNew"
                android:layout_below="@id/textViewBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:text="Add Diagnosis"
                android:textColor="@color/dark2"
                android:textSize="@dimen/_20sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewConsultation"
                android:layout_below="@id/textViewAddNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="left"
                android:text="and Medicine"
                android:textColor="@color/dark2"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewConsultationDescription"
                android:layout_below="@id/textViewConsultation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:text="@string/inventory_desc4"
                android:textColor="@color/light1"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewConsultationDescription2"
                android:layout_below="@id/textViewConsultationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:text="@string/inventory_desc5"
                android:textColor="@color/light1"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewConsultationName"
                android:layout_below="@id/textViewConsultationDescription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:text="Patient Diagnosis"
                android:textColor="@color/light1"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editTextPatientDiagnosis"
                android:layout_below="@id/textViewConsultationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/dark2"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:hint="@string/name"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark"
                />

            <TextView
                android:id="@+id/textViewPatientDiagnosisDes"
                android:layout_below="@id/editTextPatientDiagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/archivo_regular"
                android:gravity="start"
                android:text="Description"
                android:textColor="@color/light1"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editTextPatientDiagnosisDes"
                android:layout_below="@id/textViewPatientDiagnosisDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/dark2"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:hint="@string/name"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark"
                />

            <com.tiper.MaterialSpinner
                android:id="@+id/materialSpinnerPrescribedMedicine"
                android:layout_below="@+id/editTextPatientDiagnosisDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prescribed Medicine"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/dark2"
                android:textColorHint="@color/light1"
                app:backgroundTint="@color/dark2"
                app:spinnerMode="dialog" />

            <com.tiper.MaterialSpinner
                android:id="@+id/materialSpinnerPrescribedMedicineFre"
                android:layout_below="@+id/materialSpinnerPrescribedMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Frequency"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/dark2"
                android:textColorHint="@color/light1"
                app:backgroundTint="@color/dark2"
                app:spinnerMode="dialog" />




        </RelativeLayout>

    </RelativeLayout>

</layout>