<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickHandler"
            type="com.heuristify.mdu.interfaces.OnClickHandlerInterface" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light"
        android:orientation="vertical"
        tools:context=".view.activities.AddNewConsultationActivity">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="TODO"
            android:onClick="@{clickHandler::onClick}"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:src="@drawable/chevron_left_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:onClick="@{clickHandler::onClick}"
            android:text="@string/string_back"
            android:textColor="@color/light1"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toEndOf="@+id/imageViewBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAddNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewBack"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="Add New"
            android:textColor="@color/dark"
            android:textSize="@dimen/_20sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewBack"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

        <TextView
            android:id="@+id/textViewConsultation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAddNew"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="left"
            android:text="Consultation"
            android:textColor="@color/dark"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewAddNew"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddNew" />

        <TextView
            android:id="@+id/textViewConsultationDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewConsultation"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="@string/inventory_desc3"
            android:textColor="@color/light1"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultation"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultation" />

        <TextView
            android:id="@+id/textViewConsultationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewConsultationDescription"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="First Name"
            android:textColor="@color/light1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultationDescription"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationDescription" />

        <EditText
            android:id="@+id/editConsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewConsultationName"
            android:layout_marginEnd="@dimen/_23sdp"
            android:layout_marginRight="@dimen/_23sdp"
            android:backgroundTint="@color/dark2"
            android:nextFocusForward="@+id/editConsCnicFirstTwoDigit"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="100"
            android:textColor="@color/dark"
            android:textColorHint="@color/light1"
            app:layout_constraintEnd_toStartOf="@+id/cardView5"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultationName"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationName" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            app:cardBackgroundColor="@color/light1"
            app:cardCornerRadius="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/buttonTakePatientPhoto"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_shape_white_color"
            android:gravity="center"
            android:onClick="@{clickHandler::onClick}"
            android:text="Take ID Picture"
            android:textColor="@color/dark2"
            android:textSize="@dimen/small_button_text_size"
            app:layout_constraintEnd_toEndOf="@+id/cardView5"
            app:layout_constraintStart_toStartOf="@+id/cardView5"
            app:layout_constraintTop_toBottomOf="@+id/cardView5" />


        <TextView
            android:id="@+id/textViewConsultationCnicFirstTwoDigit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editConsName"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="CNIC First 2 no"
            android:textColor="@color/light1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/textViewConsultationCnicLastFourDigit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="@+id/editConsName"
            app:layout_constraintTop_toBottomOf="@+id/editConsName" />

        <TextView
            android:id="@+id/textViewConsultationCnicLastFourDigit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editConsName"
            android:layout_alignParentRight="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="CNIC Last 4 no"
            android:textColor="@color/light1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/editConsName"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewConsultationCnicFirstTwoDigit"
            app:layout_constraintTop_toBottomOf="@+id/editConsName" />

        <EditText
            android:id="@+id/editConsCnicFirstTwoDigit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewConsultationCnicFirstTwoDigit"
            android:layout_alignParentLeft="true"
            android:autofillHints="@string/name"
            android:backgroundTint="@color/dark2"
            android:nextFocusForward="@+id/editConsCnicLastFourDigit"
            android:hint="1-2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="3"
            android:textColor="@color/dark2"
            android:textColorHint="@color/light1"
            app:layout_constraintEnd_toEndOf="@+id/textViewConsultationCnicFirstTwoDigit"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultationCnicFirstTwoDigit"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationCnicFirstTwoDigit" />

        <EditText
            android:id="@+id/editConsCnicLastFourDigit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:autofillHints="@string/name"
            android:backgroundTint="@color/dark2"
            android:hint="4-5-6-7"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="7"
            android:textColor="@color/dark2"
            android:textColorHint="@color/light1"
            app:layout_constraintEnd_toEndOf="@+id/textViewConsultationCnicLastFourDigit"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultationCnicLastFourDigit"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationCnicLastFourDigit" />

        <TextView
            android:id="@+id/textViewConsultationAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="Age"
            android:textColor="@color/light1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="@+id/editConsCnicFirstTwoDigit"
            app:layout_constraintTop_toBottomOf="@+id/editConsCnicFirstTwoDigit" />


        <EditText
            android:id="@+id/editConsAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:autofillHints="@string/name"
            android:backgroundTint="@color/dark2"
            android:hint="35"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/dark2"
            android:textColorHint="@color/light1"
            app:layout_constraintEnd_toEndOf="@+id/textViewConsultationAge"
            app:layout_constraintStart_toStartOf="@+id/textViewConsultationAge"
            app:layout_constraintTop_toBottomOf="@+id/textViewConsultationAge" />

        <Button
            android:id="@+id/buttonNextConsultation"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="112dp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:onClick="@{clickHandler::onClick}"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editConsAge" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/archivo_regular"
            android:gravity="start"
            android:text="Gender"
            android:textColor="@color/light1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/editConsCnicLastFourDigit"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewConsultationAge"
            app:layout_constraintTop_toBottomOf="@+id/editConsCnicLastFourDigit" />

        <Spinner
            android:id="@+id/materialSpinnerGender"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/dark2"
            style="@style/underLineSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/editConsAge"
            app:layout_constraintEnd_toEndOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>